--- a/init.html
+++ b/init.html
@@ -105,11 +105,11 @@
   </div>
 
 <script type="module">
-/* ===== 依赖 ===== */
+/* ===== 依赖（严格与现有 fido2.js 对齐） ===== */
 import {
-  loadCredHex, saveCredHex, clearCredHex,
-  discoverCredentialHex, ensureCredentialWithChoice,
-  deriveKEK, deriveKEKWithSalt,
+  loadCredHex, saveCredHex,
+  ensureCredentialWithChoice,
+  deriveKEKWithSalt,
   aesGcmEncryptStr, aesGcmDecryptStr,
 } from './js/fido2.js';
 
@@ -124,9 +124,9 @@ const REVEAL_MS = 60_000; // 每次显示 60s
 
 const state = {
   selectedCredHex: null,     // 步骤 A 绑定的那把凭证
-  sealed: null,              // { mnemo: {ct,iv}, saltHex, credId, ... }
-  sealedChains: null,        // { ETH:{PrivEnc,PubEnc,...}, ... } 仅密文
-  branchesPub: null,         // 各链公开数据（xpub/xpub_z、path）明文可留
+  sealed: null,              // { mnemo:{nonce,ciphertext}, saltHex, credId, rp_id, info }
+  sealedChains: null,        // { ETH:{PrivEnc,PubEnc,...}, ... } —— 仅密文
+  branchesPub: null,         // { ETH:{path,xpub}, BTC:{path,xpub_z}, ... } —— 仅公开数据
   wordCount: 12,
   autoMaskTimer: null,
 };
@@ -134,6 +134,7 @@ const state = {
 /* ===== DOM 小工具 ===== */
 const $ = id => document.getElementById(id);
 const enable = (id, on)=>{ const b=$(id); if(b) b.disabled = !on; };
+
 function renderGrid(words){
   const grid=$('mnemo-grid'); if(!grid) return;
   grid.innerHTML='';
@@ -143,16 +144,13 @@ function renderGrid(words){
     grid.appendChild(d);
   });
 }
-function renderMasked(n=12){
-  renderGrid(Array.from({length:n},()=> '•••••'));
-}
+function renderMasked(n=12){ renderGrid(Array.from({length:n},()=> '•••••')); }
 function showCard(){ const c=$('mnemo-card'); if(c)c.style.display='block'; }
 function showMask(){ const m=$('mnemo-mask'); if(m)m.style.display='flex'; }
 function hideMask(){ const m=$('mnemo-mask'); if(m)m.style.display='none'; }
 function clearAutoMask(){ if(state.autoMaskTimer){ clearTimeout(state.autoMaskTimer); state.autoMaskTimer=null; } }
 
-/* ===== 步骤 A：探测 → DB 查询 → 复用/注册 ===== */
-
+/* ===== 后端查询：GET /bundles/by-cred/:credHex ===== */
 async function queryBundleByCred(credHex){
   const resp = await fetch(`${API_BASE}/bundles/by-cred/${credHex}`);
   if (resp.status === 404) return null;
@@ -161,39 +159,32 @@ async function queryBundleByCred(credHex){
   return data.bundle || null;
 }
 
-// 按钮：探测/选择凭证
+/* ===== 步骤 A：探测/复用/注册凭证（不再依赖 discoverCredentialHex） =====
+ * 逻辑：
+ * 1) 先看本地缓存的 credHex（loadCredHex），若有则查库，有记录直接跳 wallet.html；
+ * 2) 否则调用 ensureCredentialWithChoice()（浏览器弹出选择/注册），拿到 id_hex：
+ *      - 查询数据库：有记录 → 直接跳；否则作为 selectedCredHex，允许继续 B/C
+ */
 $('btn-register').onclick = async ()=>{
   const tip=$('reg-tip');
   try{
-    const found = await discoverCredentialHex(); // 本域可发现凭证
-    if (found) {
-      // 查数据库
-      const bundle = await queryBundleByCred(found);
-      if (bundle) {
-        tip.innerHTML = `<span class="ok">已存在初始化记录，正在跳转钱包…</span>`;
-        setTimeout(()=>{ location.href = `wallet.html?cred=${found}`; }, 900);
-        return;
-      }
-      // 数据库无记录 → 询问沿用
-      const useExisting = confirm(`检测到凭证（${found.slice(0,16)}…），但数据库无记录。\n是否沿用该凭证？\n取消则注册一把新凭证。`);
-      if (useExisting) {
-        state.selectedCredHex = found;
-        saveCredHex(found);
-        tip.innerHTML = `<span class="ok">已沿用现有凭证。</span>`;
-        enable('btn-gen', true);
-        return;
-      }
-      // 否则注册新凭证
+    let cred = loadCredHex();       // 优先用本地缓存（你之前就有存）
+    if (!cred) {
+      const res = await ensureCredentialWithChoice(); // 注册或选择
+      if (!res?.id_hex) throw new Error('未获得有效凭证');
+      cred = res.id_hex;
+      saveCredHex(cred);
     }
-
-    // 没找到或用户不沿用 → 注册/选择
-    const res = await ensureCredentialWithChoice(); // 可能注册新凭证或选择其它
-    if (!res?.id_hex) throw new Error('未获得有效凭证');
-    state.selectedCredHex = res.id_hex;
-    saveCredHex(res.id_hex);
-    tip.innerHTML = res.created
-      ? `<span class="ok">已注册新凭证（id: ${res.id_hex.slice(0,16)}…）。</span>`
-      : `<span class="ok">已选择凭证（id: ${res.id_hex.slice(0,16)}…）。</span>`;
+    // 查数据库是否已有数据
+    const bundle = await queryBundleByCred(cred);
+    if (bundle) {
+      tip.innerHTML = `<span class="ok">已存在初始化记录，正在跳转钱包…</span>`;
+      setTimeout(()=>{ location.href = `wallet.html?cred=${cred}`; }, 800);
+      return;
+    }
+    // 数据库无记录 → 作为本次绑定的凭证
+    state.selectedCredHex = cred;
+    tip.innerHTML = `<span class="ok">已绑定凭证（id: ${cred.slice(0,16)}…）。</span>`;
     enable('btn-gen', true);
   }catch(e){
     console.error(e);
@@ -201,8 +192,9 @@ $('btn-register').onclick = async ()=>{
   }
 };
 
-/* ===== 步骤 B：生成（立即加密；UI 默认遮挡；点击显示需 FIDO2 解锁） ===== */
-
+/* ===== 步骤 B：生成（立即加密；UI 默认遮挡；点击显示需 FIDO2 解锁） =====
+ * 注：不再使用 deriveKEK；全部通过 deriveKEKWithSalt(selectedCredHex, salt) 完成
+ */
 $('btn-gen').onclick = async ()=>{
   const tip=$('gen-tip');
   try{
@@ -215,11 +207,13 @@ $('btn-gen').onclick = async ()=>{
     const seed     = mnemonicToSeed(mnemonic,'');
     const branches = exportBranches(seed);
 
-    // 2) 立即用 FIDO2 加密助记词 + 各链 xprv
-    const { kek, salt, rp_id, info, credential_id, toHex } = await deriveKEK({ forceCredHex: state.selectedCredHex });
-    const mnEnc = await aesGcmEncryptStr(kek, mnemonic);
+    // 2) 生成盐并派生 KEK（deriveKEKWithSalt）
+    const salt = crypto.getRandomValues(new Uint8Array(32));
+    const { kek } = await deriveKEKWithSalt(state.selectedCredHex, salt);
 
-    const enc = async (s)=> s ? await aesGcmEncryptStr(kek, s) : null;
+    // 3) 加密助记词与各链 xprv/xpub
+    const mnEnc = await aesGcmEncryptStr(kek, mnemonic);
+    const enc   = async (s)=> s ? await aesGcmEncryptStr(kek, s) : null;
     const sealedChains = {
       ETH:  { path: branches.ETH.path,  PubEnc: await enc(branches.ETH.xpub),   PrivEnc: await enc(branches.ETH.xprv) },
       BTC:  { path: branches.BTC.path,  PubEnc: await enc(branches.BTC.xpub_z), PrivEnc: await enc(branches.BTC.xprv_z) },
@@ -227,7 +221,7 @@ $('btn-gen').onclick = async ()=>{
       TRON: { path: branches.TRON.path, PubEnc: await enc(branches.TRON.xpub),  PrivEnc: await enc(branches.TRON.xprv) },
     };
 
-    // 仅保留需要明文驻留的“公钥类/路径”信息
+    // 仅保留公开数据明文
     state.branchesPub = {
       ETH:  { path: branches.ETH.path,  xpub: branches.ETH.xpub },
       BTC:  { path: branches.BTC.path,  xpub_z: branches.BTC.xpub_z },
@@ -235,7 +229,7 @@ $('btn-gen').onclick = async ()=>{
       TRON: { path: branches.TRON.path, xpub: branches.TRON.xpub },
     };
 
-    // 3) 清理助记词与各链 xprv 明文副本
+    // 擦除各链 xprv 明文
     for (const k of ['ETH','BTC','EOS','TRON']) {
       if (branches[k]) {
         if ('xprv'   in branches[k]) branches[k].xprv   = null;
@@ -243,23 +237,25 @@ $('btn-gen').onclick = async ()=>{
       }
     }
 
-    // 4) 保存密文与 KEK 元信息
+    // 4) 保存密文与 KEK 元信息（salt 以 hex 保存）
+    const toHex = (u8) => [...new Uint8Array(u8)].map(b=>b.toString(16).padStart(2,'0')).join('');
     state.sealed = {
-      mnemo: { nonce: mnEnc.nonce, ciphertext: mnEnc.ciphertext },
+      mnemo:   { nonce: mnEnc.nonce, ciphertext: mnEnc.ciphertext },
       saltHex: toHex(salt),
-      credId: credential_id,
-      rp_id, info,
+      credId:  state.selectedCredHex,
+      rp_id:   location.hostname,
+      info:    'wallet-priv-bundle-v1',
     };
     state.sealedChains = sealedChains;
 
-    // 5) UI：显示卡片（默认遮挡）
+    // 5) UI：显示卡片（默认整块遮挡）
     showCard();
     renderMasked(state.wordCount);
     showMask();
     tip.textContent = '已生成并加密（默认遮挡）。';
     enable('btn-encrypt', true);
 
-    // 擦局部副本
+    // 擦明文副本
     try{ for(let i=0;i<words.length;i++) words[i]=''; }catch{}
   }catch(e){
     console.error(e);
@@ -267,18 +263,14 @@ $('btn-gen').onclick = async ()=>{
   }
 };
 
-/* ===== 显示助记词（点击一次 → FIDO2 解密 → 显示 60s 后自动遮挡并清明文） ===== */
+/* ===== 显示助记词：点击 → FIDO2 解密 → 显示 60s → 自动遮挡并清明文 ===== */
 $('btn-reveal').onclick = async ()=>{
   try{
     if(!state.sealed?.mnemo) throw new Error('尚未生成');
-
-    // 强制检查凭证一致性（与步骤 A 绑定的 selectedCredHex 一致）
-    const credHex = state.selectedCredHex || loadCredHex();
-    if(!credHex || credHex !== state.sealed.credId){
+    if(!state.selectedCredHex || state.selectedCredHex !== state.sealed.credId){
       throw new Error('当前凭证与绑定的不一致，无法解锁。');
     }
-
-    const { kek } = await deriveKEKWithSalt(credHex, state.sealed.saltHex);
+    const { kek } = await deriveKEKWithSalt(state.selectedCredHex, state.sealed.saltHex);
     const mnemonic = await aesGcmDecryptStr(kek, state.sealed.mnemo);
     const words    = mnemonic.trim().split(/\s+/);
 
@@ -289,7 +281,6 @@ $('btn-reveal').onclick = async ()=>{
     state.autoMaskTimer = setTimeout(()=>{
       renderMasked(state.wordCount);
       showMask();
-      // 尝试擦明文副本
       try{ for(let i=0;i<words.length;i++) words[i]=''; }catch{}
     }, REVEAL_MS);
   }catch(e){
@@ -306,13 +297,10 @@ $('btn-encrypt').onclick = async ()=>{
   try{
     if(!state.selectedCredHex) throw new Error('请先完成步骤 A');
     if(!state.sealed || !state.sealedChains) throw new Error('尚未生成');
-
-    // 再次强制验证凭证一致性
     if(state.selectedCredHex !== state.sealed.credId){
       throw new Error('当前凭证与已绑定的不一致，禁止写库。');
     }
 
-    // 组织 bundle
     const bundle = {
       KEKInfo:{
         rp_id: state.sealed.rp_id,
@@ -340,5 +328,6 @@ $('btn-encrypt').onclick = async ()=>{
   }
 };
 </script>
+
 </body>
 </html>
